<resources>
    <string name="app_name">LucemTrader</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="investor">Investor</string>
    <string name="admin">Admin</string>
    <string name="welcome_to">Welcome to</string>
    <string name="investor_app">Investor APP</string>
    <string name="track_your_investments_made_in_our_platform">Track your investments made in our platform</string>
    <string name="track_your_withdrawals_deposits_and_more">Track your Withdrawals, Deposits and more</string>
    <string name="track_your_profit_amp_loss_amount_and_percentage"><![CDATA[Track your profit & loss amount and percentage]]></string>
    <string name="phone_number">Phone Number</string>
    <string name="please_type_your_phone_n_number_and_country">Please type your Phone \n Number and Country</string>
    <string name="country">Country</string>
    <string name="number">Number</string>
    <string name="continue_text">Continue</string>
    <string name="verify">Verify</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_enter_code_that_was_n_sent_to_your_phone_number">Please enter Code that was \n sent to your Phone Number</string>
    <string name="resend_code">Resend Code</string>
    <string name="navigate_to_history">Navigate to history</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="amanda_cris">Amanda Cris</string>
    <string name="account">Account</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="start_btc">Start (BTC):</string>
    <string name="current_btc">Current (BTC):</string>
    <string name="profit_loss_btc">Profit/Loss (BTC):</string>
    <string name="profit_loss">Profit/Loss (%):</string>
    <string name="no_crypto_information_is_available">No crypto information is available</string>
    <string name="retry_or_swipe_down_to_refresh">Retry or swipe down to refresh</string>
    <string name="crypto">Crypto</string>
    <string name="last_update">Last Update</string>
    <string name="dollar">$</string>
    <string name="search">Search</string>
    <string name="historic">Historic</string>
    <string name="deposits">Deposits</string>
    <string name="withdrawals">Withdrawals</string>
    <string name="main">Main</string>
    <string name="btc">BTC</string>
    <string name="percentage">Percentage</string>
    <string name="_0_000">$0.000</string>
    <string name="space">&#160;</string>
    <string name="display_profit_loss">Profit/Loss</string>
    <string name="security_code">Security Code</string>
    <string name="enter_your_private_code">Enter your private code</string>
    <string name="code">Code</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="proceed">Proceed</string>

    <string name="investor_preference">"manu.apps.lucemtrader.InvestorPref"</string>
    <string name="investor_preference_key">"manu.apps.lucemtrader.InvestorPrefKey"</string>

    <string name="admin_preference">"manu.apps.lucemtrader.AdminPref"</string>
    <string name="admin_preference_key">"manu.apps.lucemtrader.AdminPrefKey"</string>

    <string name="login_logout_preference">"manu.apps.lucemtrader.LoginLogoutPreference"</string>
    <string name="login_logout_preference_key">"manu.apps.lucemtrader.LoginLogoutPrefKey"</string>

    <string name="investors">Investors</string>
    <string name="_00">#00</string>
    <string name="username">Username</string>
    <string name="since_00_mm_yyyy">Since 00 mm, yyyy</string>

    <string name="since">Since</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="admin_account">Admin Account</string>
    <string name="saved_edit_add_investor">Saved Edit Add Investor</string>
    <string name="coin">Coin</string>
    <string name="filter_by">Filter By</string>
    <string name="coin_filter_by_coin">Coin: Filter By Coin</string>
    <string name="filter_by_coin">Filter By Coin</string>
    <string name="filter_by_amount">Filter By Amount</string>
    <string name="filter_by_date">Filter By Date</string>
    <string name="filter_by_show">Filter By Show</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="photo">Photo</string>
    <string name="name_hint">Name:&#160;</string>
    <string name="username_hint"><![CDATA[Username: ]]></string>
    <string name="country_hint"><![CDATA[Country: ]]></string>
    <string name="phone_number_hint"><![CDATA[Phone Number: ]]></string>
    <string name="security_code_hint"><![CDATA[Security Code: ]]></string>
    <string name="date_joined_hint"><![CDATA[Date Joined: ]]></string>
    <string name="shared_agreed_hint"><![CDATA[% Shared Agreed: ]]></string>
    <string name="edit_investor">Edit Investor</string>
    <string name="delete_investor">Delete Investor</string>
    <string name="search_with_dots">Search...</string>
    <string name="capture_from_camera">Capture From Camera</string>
    <string name="pick_from_gallery">Pick From Gallery</string>
    <string name="no_thanks">No Thanks</string>

</resources>