<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_admin_account_settings">
        <item
            android:id="@+id/action_admin_account"
            android:orderInCategory="1"
            android:title="@string/admin_account"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_admin_settings"
            android:orderInCategory="3"
            android:title="@string/settings"
            app:showAsAction="never" />

    </group>

    <group android:id="@+id/group_admin_log_out">
        <item
            android:id="@+id/action_admin_log_out"
            android:orderInCategory="4"
            android:title="@string/logout"
            app:showAsAction="never" />
    </group>

</menu>